k8s/matrix/postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  ports:
    - name: postgres
      port: 5432
      protocol: TCP
      targetPort: 5432
  selector:
    k8s-app: postgres
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  labels:
    k8s-app: postgres
spec:
  selector:
    matchLabels:
      k8s-app: postgres
  serviceName: postgres
  replicas: 1
  revisionHistoryLimit: 10
  template:
    metadata:
      labels:
        k8s-app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:16
          imagePullPolicy: Always
          securityContext:
            privileged: false
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres-storage
  volumeClaimTemplates:
    - metadata:
        name: postgres-storage
      spec:
        storageClassName: standard-rwo
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 10Gi
