k8s/matrix/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: matrix
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`matrix.anshulg.com`)
      services:
        - name: matrix
          port: 8008
          kind: Service
  tls:
    secretName: matrix-cert
    domains:
      - main: matrix.anshulg.com
