k8s/matrix/well-known.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: matrix-root
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`anshulg.com`) && PathPrefix(`/.well-known/matrix`)
      services:
        - name: nginx-root
          port: 80
          kind: Service
  tls:
    secretName: matrix-root-cert
    domains:
      - main: anshulg.com
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-root
spec:
  selector:
    matchLabels:
      app: nginx-root
  template:
    metadata:
      labels:
        app: nginx-root
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /etc/nginx/conf.d/
              name: config
      volumes:
        - name: config
          configMap:
            name: nginx-root-config
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-root
spec:
  selector:
    app: nginx-root
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
